# 106aFinal

./: .gitignore  README.md
camera_perception/camera_perception/: logitech_sfm_node.py
install/: local_setup.sh  setup.sh
install/robot_waiter_slam/share/robot_waiter_slam/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/robot_waiter_slam/share/robot_waiter_slam/config/: slam_params.yaml
log/: latest_build
maps/: mapstuff.txt  restaurant_map.pgm  restaurant_map.yaml
robot_waiter/: frames_2026-04-21_11.25.33.gv
robot_waiter/config/: waypoints.yaml
robot_waiter/maps/: restaurant_map.pgm  restaurant_map.yaml
robot_waiter/robot_waiter_slam/: README.md  setup.cfg  setup.py
robot_waiter/robot_waiter_slam/launch/: slam.launch.py
robot_waiter/robot_waiter_slam/robot_waiter_slam/: slam_node.py
src/camera_perception/: package.xml  setup.cfg  setup.py
src/camera_perception/camera_perception/: logitech_sfm_node.py  yolo_perception_node.py
src/camera_perception/launch/: perception.launch.py
src/slam/: package.xml  setup.cfg  setup.py
src/slam/config/: slam_params.yaml  waypoints.yaml
src/slam/launch/: slam.launch.py
src/slam/slam/: coarse_map_publisher.py  map_utils.py  path_publisher.py  plan_path.py  planner.py  slam_node.py  waypoint_pose_publisher.py
src/waiter/: package.xml  setup.py
src/waiter/waiter/: kitchen_node.py  order_node.py
