<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>camera_perception</name>
  <version>0.0.1</version>
  <description>ROS 2 YOLO perception node</description>
  <maintainer email="student@berkeley.edu">Team Waiter</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>camera_perception_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>